[package]
name = "spa-knocker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
getrandom = "0.2"
